# rust_experiments

bevy/: BEVY_REFERENCES.md  Cargo.toml  README.md
bevy/assets/textures/images/: list.sh
bevy/examples/: animate.rs  circle.rs  quad.rs  rect.rs  rounded_rect.rs  stroked_rect.rs
bevy/src/: arguments.rs  components.rs  game_logic.rs  image_metadatas.rs  lib.rs  quad_mesh.rs  random.rs  resources.rs  shapes.rs  systems.rs
bevy/src/examples/: breakout.rs  one.rs
bevy/src/shapes/: circle.rs  rect.rs  rounded_rect.rs  stroked_rect.rs
bevy_dev/: BEVY_REFERENCES.md  README.md  TODO.md
bevy_dev/assets/textures/images/: images.txt
bevy_dev/src/: circle_mesh.rs  lib.rs  main.rs  quad_mesh.rs
bevy_dev/src/examples/: circle.rs
bevy_w_rapier/: Cargo.toml  README.md
bevy_w_rapier/src/: components.rs  cylinder.rs  lib.rs  main.rs  resources.rs  systems.rs
iter_gen/: Cargo.toml
iterators_and_generators/src/: main.rs
macroquad/: Cargo.toml  README.md  photo-credits.txt
macroquad/src/: main.rs
macroquad_exp/: .gitignore  Cargo.toml  README.md
macroquad_exp/src/: backup.txt  main.rs  notes.txt  shaders.rs  types.rs
rand_exp/: Cargo.toml
rand_exp/src/: main.rs
rocket/: rocket.http
rocket/public/: 1.html
rocket_exp/: Cargo.toml
rocket_exp/src/: main.rs
