[package]
name = "bevy_dev"
version = "0.1.0"
authors = ["José Pedro Dias <jose.pedro.dias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.4", features = ["jpeg", "dynamic"] }
# bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "master", features = ["jpeg", "dynamic"] }
rand = "0.8.3"
rand_pcg = "0.3.0"