[package]
name = "bevy_w_rapier"
version = "0.1.0"
authors = ["José Pedro Dias <jose.pedro.dias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.4", features = ["jpeg", "dynamic"] }
rapier3d = "0.6.1"
bevy_rapier3d = "0.8.0"
#bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier.git", branch = "master", features = ["dim2", "dim3"] }