[package]
name = "macroquad_exp"
version = "0.1.0"
authors = ["José Pedro Dias <jose.pedro.dias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#macroquad = "0.2.9"
#macroquad = { git = "https://github.com/not-fl3/macroquad" }
macroquad = { git = "https://github.com/Deseteral/macroquad", branch = "miniquad-macos-sokol-app-update" }