[package]
name = "rocket_exp"
version = "0.1.0"
authors = ["José Pedro Dias <jose.pedro.dias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", path = "contrib/lib", default-features = false, features = ["serve", "json"] }
serde = "1.0.123"

